// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridActionMenuComponent should hide the menu options panel when the component is closed via omitting the \`open\` class 1`] = `
<pf-grid-action-menu
  close={[Function EventEmitter]}
  copyClick={[Function EventEmitter]}
  deleteClick={[Function EventEmitter]}
  editClick={[Function EventEmitter]}
  isOpen="false"
  open={[Function EventEmitter]}
  runStatementClick={[Function EventEmitter]}
  viewHistoryClick={[Function EventEmitter]}
>
  <div
    pfclickelsewhere=""
  >
    <a
      class="open-actions"
      href="javascript:void(0)"
      title="Actions"
    >
      <fa-icon
        aria-hidden="true"
        class="ellipsis-menu"
      />
    </a>
    <div
      class="actions position-absolute shadow-sm p-3"
    >
      <a
        class="grid-action-link d-block"
        href="javascript:void(0)"
      >
        <fa-icon
          aria-hidden="true"
          class="grid-action-icon"
        />
        <label
          class="ml-2"
        >
          Edit
        </label>
      </a>
      
      
      <a
        class="grid-action-link d-block"
        href="javascript:void(0)"
      >
        <fa-icon
          aria-hidden="true"
          class="grid-action-icon"
        />
        <label
          class="ml-2"
        >
          Copy
        </label>
      </a>
      <a
        class="grid-action-link d-block"
        href="javascript:void(0)"
      >
        <fa-icon
          aria-hidden="true"
          class="grid-action-icon text-danger"
        />
        <label
          class="ml-2 mb-0 text-danger"
        >
          Delete
        </label>
      </a>
    </div>
  </div>
</pf-grid-action-menu>
`;

exports[`GridActionMenuComponent should show the menu options panel when the component is open via adding the \`open\` class 1`] = `
<pf-grid-action-menu
  close={[Function EventEmitter]}
  copyClick={[Function EventEmitter]}
  deleteClick={[Function EventEmitter]}
  editClick={[Function EventEmitter]}
  isOpen={[Function Boolean]}
  open={[Function EventEmitter]}
  runStatementClick={[Function EventEmitter]}
  viewHistoryClick={[Function EventEmitter]}
>
  <div
    pfclickelsewhere=""
  >
    <a
      class="open-actions"
      href="javascript:void(0)"
      title="Actions"
    >
      <fa-icon
        aria-hidden="true"
        class="ellipsis-menu"
      />
    </a>
    <div
      class="actions position-absolute shadow-sm p-3 open"
    >
      <a
        class="grid-action-link d-block"
        href="javascript:void(0)"
      >
        <fa-icon
          aria-hidden="true"
          class="grid-action-icon"
        />
        <label
          class="ml-2"
        >
          Edit
        </label>
      </a>
      
      
      <a
        class="grid-action-link d-block"
        href="javascript:void(0)"
      >
        <fa-icon
          aria-hidden="true"
          class="grid-action-icon"
        />
        <label
          class="ml-2"
        >
          Copy
        </label>
      </a>
      <a
        class="grid-action-link d-block"
        href="javascript:void(0)"
      >
        <fa-icon
          aria-hidden="true"
          class="grid-action-icon text-danger"
        />
        <label
          class="ml-2 mb-0 text-danger"
        >
          Delete
        </label>
      </a>
    </div>
  </div>
</pf-grid-action-menu>
`;
